--- a/style.css
+++ b/style.css
@@ -607,7 +607,8 @@ nav ul li a:hover {
     }
 
     .banner {
-        max-height: 35vw;
+        height: 50vw;
+        max-height: 700px;
     }
 
     .banner_text1 p {
@@ -623,14 +624,15 @@ nav ul li a:hover {
     }
 
     .banner_img {
-        max-height: 35vw;
+        max-height: 50vw;
+        max-height: 700px;
         background-position: bottom;
         background-size: cover;
         margin: auto;
     }
 
     .item {
-        height: 35vw;
+        height: 30vw;
         display: grid;
         grid-template-columns: 20% 20% 20% 20% 20%;
         grid-template-rows: 100%;
