--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ nav ul li a:hover {
 
 .footer {
     width: 100%;
-    height: 55vw;
+    height: 60vw;
     background-color: #29C8FF;
     color: aliceblue;
     padding-top: 20px;
@@ -327,7 +327,7 @@ nav ul li a:hover {
     font-size: 1.2rem;
 }
 
-.footer_contact{
+.footer_contact {
     display: flex;
     height: 8vw;
     margin: 0 25vw 5vw 25vw;
@@ -351,15 +351,15 @@ nav ul li a:hover {
     mask-size: 100% 100%;
     margin-right: 2vw;
     color: #29C8FF;
-  }
+}
 
-  .contact_mail{
+.contact_mail {
     font-size: 3vw;
     font-weight: 900;
     color: #29C8FF;
-    padding: 2vw 0 ;
+    padding: 2vw 0;
     line-height: 8vw;
-  }
+}
 
 .copyright {
     font-weight: 200;
@@ -374,20 +374,17 @@ nav ul li a:hover {
 .article_block {
     background-color: #fff;
     width: 100vw;
-    height: 100%;
-    padding-top: 20px;
-    margin-top: 50px;
+    padding-top: 30vw;
+}
+
+.article_block h1 {
+    font-size: 8vw;
+    text-align: center;
+    font-weight: 900;
 }
 
 .about_block {
     background-image: linear-gradient(150deg, #D5F5F2 0%, #29c8ff 100%);
-}
-
-.article_block h1 {
-    font-size: 2rem;
-    text-align: center;
-    margin-top: 2rem;
-    font-weight: 900;
 }
 
 .info_block {
@@ -395,7 +392,7 @@ nav ul li a:hover {
     height: auto;
     background-color: rgba(255, 255, 255, 0.489);
     backdrop-filter: invert(5%);
-    margin: 10% auto 10% auto;
+    margin: 10vw auto 10vw auto;
     border: #fff 1px solid;
     border-radius: 15px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.20);
@@ -474,70 +471,81 @@ nav ul li a:hover {
     margin-bottom: 5px;
 }
 
+
+
+/*portfolio page*/
+
 .portfolio_block {
     background-color: transparent;
-    width: 100vw;
-    padding: 30px 0;
-}
-
-.portfolio_block a {
-    display: block;
-    width: 90%;
-    text-decoration: none;
-    color: black;
-    margin: 0 auto;
-    margin-bottom: 30px;
-}
-
-.option_block {
-    background-image: linear-gradient(120deg, #93efbc 30%, #57d5ff 100%);
     width: 100%;
+}
+
+.link_block{
+    width: 100%;
+    margin: 0;
+}
+
+.portfolio_link{
+    width: 90vw;
     height: 30vw;
-    border-radius: 20px;
-    border: #fff 1px solid;
+    background-image: linear-gradient(120deg, #93efbc 30%, #57d5ff 100%);
     box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.20);
     transition: all 0.5s 0s ease-in-out;
-    margin: 0 auto;
+    border-radius: 20px;
+    border: #fff 1px solid;
+    margin: 10vw auto 10vw auto;
 }
 
-.option_block:hover {
+.portfolio_link a {
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
+    color: black;
+}
+
+.portfolio_link:hover {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.50);
 }
 
-.option_block_filter {
+.portfolio_link_filter {
     width: 100%;
     height: 100%;
-    padding: 0 15px;
     display: flex;
     align-items: center;
     transition: all 1s 0s ease-in-out;
 }
 
-.option_block_filter:hover {
+.portfolio_link_filter:hover {
     backdrop-filter: hue-rotate(180deg);
+}
+
+.option_block{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    padding: 3vw;
 }
 
 .opt_img_block {
     width: 42%;
-    height: 80%;
-    margin-right: 1.5%;
+    height: 100%;
 }
 
 .opt_img {
     width: 100%;
     height: 100%;
     border-radius: 10px;
-    border: #ffffff9e 1px solid;
     background-position: center;
     background-size: cover;
 }
 
 .opt_img_1 {
-    background-image: url(img/calculator.png);
+    background-image: url(img/calculator-banner.png);
 }
 
 .opt_img_2 {
-    background-image: url(img/creditcard\ page.png);
+    background-image: url(img/credit-banner.png);
 }
 
 .opt_img_3 {
@@ -547,7 +555,7 @@ nav ul li a:hover {
 .opt_content_block {
     width: 55%;
     height: 85%;
-    margin-left: 1.5%;
+    margin-left: 3vw;
 }
 
 .opt_title {
@@ -616,7 +624,7 @@ nav ul li a:hover {
         top: 20vw;
         left: 7vw;
     }
-    
+
     .banner_text2 p {
         font-size: 3vw;
         top: 25vw;
@@ -753,13 +761,15 @@ nav ul li a:hover {
         max-width: 80%;
         max-height: 300px;
     }
-    .footer{
+
+    .footer {
         padding: 0;
         width: 100%;
         height: 11vw;
         display: block;
     }
-    .footer_nav{
+
+    .footer_nav {
         display: flex;
         justify-content: space-around;
         align-items: center;
@@ -767,40 +777,51 @@ nav ul li a:hover {
         padding: 0;
         height: 88%;
     }
-    .footer_img{
+
+    .footer_img {
         width: 6.2vw;
         height: 3vw;
         margin: 0;
     }
-    .footer_menu{
+
+    .footer_menu {
         width: auto;
         height: 100%;
         margin: 0;
     }
-    .footer_menu ul{
+
+    .footer_menu ul {
         align-items: center;
         margin: 0;
         margin-right: 1vw;
     }
-    .footer_menu ul a{
+
+    .footer_menu ul a {
         margin-right: 10vw;
     }
-    .footer_contact{
+
+    .footer_contact {
         height: 2vw;
         margin: 0;
     }
 
-    .contact_icon{
+    .article_block{
+        padding-top: 8vw;
+    }
+
+    .contact_icon {
         width: 1.5vw;
         height: 1.5vw;
         margin: 0;
         margin: 0 0.5vw;
     }
-    .contact_mail{
+
+    .contact_mail {
         font-size: 0.8vw;
         line-height: 2vw;
         margin-right: 0.5vw;
-      }
+    }
+
     .copyright {
         font-weight: 200;
         font-size: 0.6rem;
@@ -809,5 +830,16 @@ nav ul li a:hover {
         justify-content: end;
         align-items: end;
         margin-top: -0.1vw;
+    }
+
+    /*portfolio*/
+    .portfolio_block h1{
+        font-size: 3vw;
+    }
+    .portfolio_link{
+        width: 90vw;
+        height: 20vw;
+        max-width: 1200px;
+        max-height: 350px;
     }
 }
